--- a/css/css/main.css
+++ b/css/css/main.css
@@ -16,6 +16,7 @@ body {
 .autoscroll {
   color: #ffffff;
   position: absolute;
+  text-decoration: none;
   bottom: 0; }
 
 #landing-hero {
@@ -26,11 +27,37 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center; }
+  #landing-hero a {
+    margin: 1%; }
 
-.nav {
+nav {
   background: #000000;
-  height: 40px;
-  color: #ffffff; }
+  height: 45px;
+  color: #ffffff;
+  width: 100%;
+  display: flex;
+  align-items: center; }
+
+nav a {
+  color: #ffffff;
+  text-decoration: none;
+  margin-left: 1%;
+  margin-right: 1%; }
+
+.navbar {
+  padding-left: 7.5%;
+  width: 100%;
+  display: flex; }
+  .navbar span {
+    color: #ffffff;
+    margin-left: auto;
+    margin-right: 2%; }
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; }
 
 .wrapper {
   background: #ffffff;
@@ -66,7 +93,7 @@ body {
 .content {
   background: #0300FF;
   width: 100%;
-  min-height: 300px;
+  min-height: 400px;
   max-height: 100%; }
   .content.grey {
     background: #C7C3BD;
