--- a/css/css/main.css
+++ b/css/css/main.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #000000; }
+  background: #000000;
+  -webkit-font-smoothing: antialiased; }
 
 .scrolling {
   color: #ffffff;
