--- a/css/css/main.css
+++ b/css/css/main.css
@@ -68,6 +68,7 @@ nav a {
 
 .projects {
   background: #ffffff;
+  position: relative;
   width: 100%;
   min-height: 400px;
   max-height: 100%; }
@@ -82,7 +83,8 @@ nav a {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  width: inherit; }
+  width: inherit;
+  margin-bottom: 1%; }
 
 .project-item {
   margin: 1em;
@@ -93,13 +95,59 @@ nav a {
     margin: 5px; }
 
 h3 {
-  width: 40%; }
+  width: 40%;
+  padding-top: 5px; }
+
+.border {
+  width: 25%;
+  margin: 0;
+  height: 4.5%;
+  border: 1px white;
+  background: #ffffff;
+  left: 0;
+  bottom: 0;
+  position: absolute; }
+  .border.skills {
+    background: #ffffff;
+    width: 20%; }
+  .border.edu {
+    width: 17.5%;
+    top: 0;
+    background: #C7C3BD; }
+  .border.proj {
+    background: #C7C3BD;
+    width: 35%;
+    height: 4%; }
+  .border.foot {
+    background: #0300FF;
+    width: 17.5%; }
+
+.footer {
+  min-height: 300px;
+  width: 100%;
+  background: #0300FF;
+  display: flex;
+  flex-flow: column nowrap; }
+  .footer h3 {
+    color: #ffffff;
+    margin: 2% 7.5% 1%; }
+  .footer p {
+    text-align: left;
+    background: #ffffff;
+    color: #0300FF;
+    width: 40%;
+    margin: 2% 7.5% 1%; }
+  .footer a {
+    text-decoration: none; }
+  .footer .copyright {
+    display: inline;
+    text-align: center; }
 
 .content {
   background: #0300FF;
   width: 100%;
-  min-height: 400px;
-  max-height: 100%; }
+  min-height: 450px;
+  position: relative; }
   .content.grey {
     background: #C7C3BD;
     color: #000000; }
