--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,9 +1,24 @@
+// Breakpoints
+
+$lg: 991px;
+$med: 768px;
+$sm: 575px;
+
+// @media all and (max-width: $lg) {  } 
+// @media all and (max-width: $med) {  } 
+// @media all and (max-width: $sm) {  }
+
+
+// Colours & fonts
+
 $bg: #000000;
 $ff: 'Overpass Mono';
 $blue: #0300FF;
 $white: #ffffff;
-$hero: #ffffff;
 $grey: #C7C3BD;
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -16,6 +31,14 @@ body {
     color: $white;
     width: 40%;
     text-align: center;
+    @media all and (max-width: $med) {
+        width: 75%;
+        text-align: left;
+      } 
+    @media all and (max-width: $sm) { 
+        width: 80%;
+        text-align: left;
+     }
 }
 
 .highlight-word {
@@ -64,6 +87,11 @@ nav a {
     padding-left: 7.5%;
     width: 100%;
     display: flex;
+
+    @media all and (max-width: $sm) {
+        font-size: 11px;
+        } 
+    
     & span {
         color: $white;
         margin-left: auto;
@@ -79,9 +107,18 @@ nav a {
 }
 
 .wrapper {
-    background: $hero;
+    background: $white;
     display: flex;
     flex-flow: column wrap;
+}
+
+.date {
+    @media all and (max-width: $med) {
+        margin-bottom: 3%;
+         } 
+    @media all and (max-width: $sm) {
+        margin-bottom: 3%;
+        } 
 }
 
 .projects {
@@ -98,6 +135,7 @@ nav a {
         width: 100%;
         height: 80%;
     }
+        
 }
 
 .project-wrapper {
@@ -105,7 +143,15 @@ nav a {
     flex-flow: row nowrap;
     justify-content: center;
     width: inherit;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    @media all and (max-width: $med) {
+        flex-flow: column wrap;
+        margin-bottom: 2.5%;
+            } 
+    @media all and (max-width: $sm) {
+        flex-flow: column wrap;
+        margin-bottom: 3%;
+        } 
 }
 
 .project-item {
@@ -116,22 +162,45 @@ nav a {
         color: $blue;
         margin: 5px;
     }
+
+    @media all and (max-width: $med) {
+        width: 80%;
+            } 
+    @media all and (max-width: $sm) {
+        width: 80%;
+        } 
 }
 
 h3 {
     width: 40%;
     padding-top: 5px;
+    @media all and (max-width: $med) {
+        width: 70%;
+        margin: 2%;
+            } 
+    @media all and (max-width: $sm) {
+        width: 75%;
+        margin: 2%
+        } 
 }
 
 .border {
     width: 25%;
     margin: 0;
-    height: 4.5%;
+    height: 4%;
     border: 1px white;
     background: $white;
     left: 0;
     bottom: 0;
     position: absolute;
+
+    @media all and (max-width: $med) {
+        height: 4%;
+            } 
+    @media all and (max-width: $sm) {
+        height: 2%;
+        } 
+
     &.skills {
         background: $white;
         width: 20%;
@@ -140,11 +209,23 @@ h3 {
         width: 17.5%;
         top: 0;
         background: $grey;
+        @media all and (max-width: $med) {
+            height: 2.5%;
+                } 
+        @media all and (max-width: $sm) {
+            height: 1.5%;
+            } 
     }
     &.proj {
         background: $grey;
         width: 35%;
         height: 4%;
+        @media all and (max-width: $med) {
+            height: 2.5%;
+                } 
+        @media all and (max-width: $sm) {
+            height: 2%;
+            } 
     }
     &.foot {
         background: $blue;
@@ -168,6 +249,14 @@ h3 {
         color: $blue;
         width: 40%;
         margin: 2% 7.5% 1%;
+        @media all and (max-width: $med) {
+            width: 75%;
+            margin: 3% 7.5% 1%;
+                } 
+        @media all and (max-width: $sm) {
+            width: 80%;
+            margin: 3% 7.5% 1%;
+            } 
     }
     & a {
         text-decoration: none;
@@ -183,6 +272,14 @@ h3 {
     width: 100%;
     min-height: 450px;
     position: relative;
+
+    @media all and (max-width: $med) {
+
+      } 
+      @media all and (max-width: $sm) {
+       
+      } 
+
     &.grey {
         background: $grey;
         color: $bg;
@@ -224,6 +321,14 @@ h3 {
         margin: 2% 7.5% 1%;
         text-align: left;
         word-wrap: break-word;
+
+        @media all and (max-width: $med) {
+            width: 80%;
+                } 
+        @media all and (max-width: $sm) {
+            width: 80%;
+            } 
+
         &.date {
             background: none;
         }
@@ -231,5 +336,12 @@ h3 {
     & h3 {
         color: $white;
         margin: 2% 7.5% 1%;
+
+        @media all and (max-width: $med) {
+            margin: 4% 7.5% 1%;
+                } 
+        @media all and (max-width: $sm) {
+            margin: 4% 7.5% 1%;
+            } 
     }
 }
