--- a/css/css/main.css
+++ b/css/css/main.css
@@ -21,7 +21,8 @@ body {
 .highlight-word {
   color: #C7C3BD;
   text-decoration: underline;
-  text-decoration-color: #0300FF; }
+  -webkit-text-decoration-color: #0300FF;
+          text-decoration-color: #0300FF; }
 
 .autoscroll {
   color: #ffffff;
@@ -33,10 +34,19 @@ body {
   height: 100vh;
   width: 100vw;
   background: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   #landing-hero a {
     margin: 1%; }
 
@@ -45,8 +55,12 @@ nav {
   height: 45px;
   color: #ffffff;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 nav a {
   color: #ffffff;
@@ -57,6 +71,8 @@ nav a {
 .navbar {
   padding-left: 7.5%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
   @media all and (max-width: 575px) {
     .navbar {
@@ -74,8 +90,13 @@ nav a {
 
 .wrapper {
   background: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column wrap; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap; }
 
 @media all and (max-width: 768px) {
   .date {
@@ -98,18 +119,31 @@ nav a {
     height: 80%; }
 
 .project-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: inherit;
   margin-bottom: 2%; }
   @media all and (max-width: 768px) {
     .project-wrapper {
-      flex-flow: column wrap;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
       margin-bottom: 2.5%; } }
   @media all and (max-width: 575px) {
     .project-wrapper {
-      flex-flow: column wrap;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
       margin-bottom: 3%; } }
 
 .project-item {
@@ -184,8 +218,13 @@ h3 {
   min-height: 300px;
   width: 100%;
   background: #0300FF;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column nowrap; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap; }
   .footer h3 {
     color: #ffffff;
     margin: 2% 7.5% 1%; }
