Add expand classes, added anchors, updated spacing

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -25,6 +25,22 @@ body {
     font-family: $ff, monospace;
 }
 
+.anchor {
+    height: 55px;
+    display: block;
+    margin-top: -55px;
+    visibility: hidden;
+}
+
+.expand {
+    background: transparent;
+    border: 0;
+    & img {
+        width: 15px;
+        height: 15px;
+    }
+}
+
 .scrolling {
     color: $white;
     width: 40%;
@@ -156,9 +172,12 @@ nav a {
     margin: 1em;
     min-height: 300px;
     width: 37.5%;
+    display: flex;
+    flex-flow: column nowrap;
     & p {
         color: $blue;
         margin: 5px;
+        width: 70%;
     }
 
     @media all and (max-width: $med) {
@@ -167,6 +186,22 @@ nav a {
     @media all and (max-width: $sm) {
         width: 80%;
         } 
+}
+
+.project-text {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.expand {
+    margin-left: auto;
+    align-self: center;
+    margin-right: 2.5px;
+    
+    & img {
+       height: 20px;
+       width: 20px; 
+    }
 }
 
 h3 {
