--- a/css/css/main.css
+++ b/css/css/main.css
@@ -5,6 +5,19 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: "Overpass Mono", monospace; }
 
+.anchor {
+  height: 55px;
+  display: block;
+  margin-top: -55px;
+  visibility: hidden; }
+
+.expand {
+  background: transparent;
+  border: 0; }
+  .expand img {
+    width: 15px;
+    height: 15px; }
+
 .scrolling {
   color: #ffffff;
   width: 40%;
@@ -149,16 +162,42 @@ nav a {
 .project-item {
   margin: 1em;
   min-height: 300px;
-  width: 37.5%; }
+  width: 37.5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap; }
   .project-item p {
     color: #0300FF;
-    margin: 5px; }
+    margin: 5px;
+    width: 70%; }
   @media all and (max-width: 768px) {
     .project-item {
       width: 80%; } }
   @media all and (max-width: 575px) {
     .project-item {
       width: 80%; } }
+
+.project-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap; }
+
+.expand {
+  margin-left: auto;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin-right: 2.5px; }
+  .expand img {
+    height: 20px;
+    width: 20px; }
 
 h3 {
   width: 40%;
