--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -170,6 +170,7 @@ nav a {
 
 .project-item {
     margin: 1em;
+    margin-bottom: 3.5%;
     min-height: 300px;
     width: 37.5%;
     display: flex;
@@ -178,6 +179,14 @@ nav a {
         color: $blue;
         margin: 5px;
         width: 70%;
+    }
+
+    &.active {
+        border: 2px solid $blue;
+    }
+
+    &.inactive {
+        border: none;
     }
 
     @media all and (max-width: $med) {
@@ -190,17 +199,58 @@ nav a {
 
 .project-text {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    & .proj-expand {
+        background: $blue;
+        height: 400px;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+
+        &.inactive {
+            display: none;
+        }
+        &.active {
+            visibility: visible;
+        }
+
+        & p {
+            width: 95%;
+            color: $white;
+
+        }
+    }
 }
 
 .expand {
     margin-left: auto;
-    align-self: center;
+    margin-top: 2.5%;
     margin-right: 2.5px;
-    
+
     & img {
        height: 20px;
-       width: 20px; 
+       width: 20px;
+    }
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.cta {
+    color: $white;
+    background: $blue;
+    border: 2px solid $white;
+    bottom: 0;
+    margin: 3%;
+    position: absolute;
+
+    &:hover {
+        color: $blue;
+        background: $white;
+        border: 2px solid $white;
     }
 }
 
