--- a/css/css/main.css
+++ b/css/css/main.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: #000000;
+  background: #262322;
   -webkit-font-smoothing: antialiased;
   font-family: "Overpass Mono", monospace; }
 
@@ -19,7 +19,7 @@ body {
     height: 15px; }
 
 .scrolling {
-  color: #ffffff;
+  color: #F7FFF7;
   width: 40%;
   text-align: center; }
   @media all and (max-width: 768px) {
@@ -32,13 +32,10 @@ body {
       text-align: left; } }
 
 .highlight-word {
-  color: #C7C3BD;
-  text-decoration: underline;
-  -webkit-text-decoration-color: #0300FF;
-          text-decoration-color: #0300FF; }
+  color: #D52941; }
 
 .autoscroll {
-  color: #ffffff;
+  color: #F7FFF7;
   position: absolute;
   text-decoration: none;
   bottom: 0; }
@@ -46,7 +43,7 @@ body {
 #landing-hero {
   height: 100vh;
   width: 100vw;
-  background: #000000;
+  background: #262322;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,9 +61,9 @@ body {
     margin: 1%; }
 
 nav {
-  background: #000000;
+  background: #262322;
   height: 45px;
-  color: #ffffff;
+  color: #F7FFF7;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -76,7 +73,7 @@ nav {
           align-items: center; }
 
 nav a {
-  color: #ffffff;
+  color: #F7FFF7;
   text-decoration: none;
   margin-left: 1%;
   margin-right: 1%; }
@@ -91,7 +88,7 @@ nav a {
     .navbar {
       font-size: 11px; } }
   .navbar span {
-    color: #ffffff;
+    color: #F7FFF7;
     margin-left: auto;
     margin-right: 2%; }
 
@@ -99,10 +96,11 @@ nav a {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
   width: 100%; }
 
 .wrapper {
-  background: #ffffff;
+  background: #F7FFF7;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,14 +117,14 @@ nav a {
     margin-bottom: 3%; } }
 
 .projects {
-  background: #ffffff;
+  background: #F7FFF7;
   position: relative;
   width: 100%;
   min-height: 400px;
   max-height: 100%; }
   .projects h3 {
     margin: 2% 7.5% 1%;
-    color: #0300FF; }
+    color: #083D77; }
   .projects img {
     width: 100%;
     height: 80%; }
@@ -172,11 +170,11 @@ nav a {
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap; }
   .project-item p {
-    color: #0300FF;
+    color: #083D77;
     margin: 5px;
     width: 70%; }
   .project-item.active {
-    border: 2px solid #0300FF; }
+    border: 2px solid #083D77; }
   .project-item.inactive {
     border: none; }
   @media all and (max-width: 768px) {
@@ -195,7 +193,7 @@ nav a {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap; }
   .project-text .proj-expand {
-    background: #0300FF;
+    background: #083D77;
     height: 400px;
     width: 100%;
     position: relative;
@@ -215,7 +213,7 @@ nav a {
       visibility: visible; }
     .project-text .proj-expand p {
       width: 95%;
-      color: #ffffff; }
+      color: #F7FFF7; }
 
 .expand {
   margin-left: auto;
@@ -228,16 +226,16 @@ nav a {
     cursor: pointer; }
 
 .cta {
-  color: #ffffff;
-  background: #0300FF;
-  border: 2px solid #ffffff;
+  color: #F7FFF7;
+  background: #083D77;
+  border: 2px solid #F7FFF7;
   bottom: 0;
   margin: 3%;
   position: absolute; }
   .cta:hover {
-    color: #0300FF;
-    background: #ffffff;
-    border: 2px solid #ffffff; }
+    color: #083D77;
+    background: #F7FFF7;
+    border: 2px solid #F7FFF7; }
 
 h3 {
   width: 40%;
@@ -256,7 +254,7 @@ h3 {
   margin: 0;
   height: 4%;
   border: 1px white;
-  background: #ffffff;
+  background: #F7FFF7;
   left: 0;
   bottom: 0;
   position: absolute; }
@@ -267,12 +265,12 @@ h3 {
     .border {
       height: 2%; } }
   .border.skills {
-    background: #ffffff;
+    background: #F7FFF7;
     width: 20%; }
   .border.edu {
     width: 17.5%;
     top: 0;
-    background: #C7C3BD; }
+    background: #D52941; }
     @media all and (max-width: 768px) {
       .border.edu {
         height: 2.5%; } }
@@ -280,7 +278,7 @@ h3 {
       .border.edu {
         height: 1.5%; } }
   .border.proj {
-    background: #C7C3BD;
+    background: #D52941;
     width: 35%;
     height: 4%; }
     @media all and (max-width: 768px) {
@@ -290,13 +288,13 @@ h3 {
       .border.proj {
         height: 2%; } }
   .border.foot {
-    background: #0300FF;
+    background: #083D77;
     width: 17.5%; }
 
 .footer {
   min-height: 300px;
   width: 100%;
-  background: #0300FF;
+  background: #083D77;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -305,12 +303,12 @@ h3 {
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap; }
   .footer h3 {
-    color: #ffffff;
+    color: #F7FFF7;
     margin: 2% 7.5% 1%; }
   .footer p {
     text-align: left;
-    background: #ffffff;
-    color: #0300FF;
+    background: #F7FFF7;
+    color: #083D77;
     width: 40%;
     margin: 2% 7.5% 1%; }
     @media all and (max-width: 768px) {
@@ -328,36 +326,36 @@ h3 {
     text-align: center; }
 
 .content {
-  background: #0300FF;
+  background: #083D77;
   width: 100%;
   min-height: 450px;
   position: relative; }
   .content.grey {
-    background: #C7C3BD;
-    color: #000000; }
+    background: #D52941;
+    color: #262322; }
     .content.grey p {
-      background: #ffffff;
-      color: #C7C3BD; }
+      background: #F7FFF7;
+      color: #D52941; }
       .content.grey p.date {
-        color: #ffffff; }
+        color: #F7FFF7; }
   .content.blue {
-    background: #0300FF;
-    color: #ffffff; }
+    background: #083D77;
+    color: #F7FFF7; }
     .content.blue p {
-      background: #ffffff;
-      color: #0300FF; }
+      background: #F7FFF7;
+      color: #083D77; }
       .content.blue p.date {
-        color: #ffffff; }
+        color: #F7FFF7; }
   .content.white {
-    background: #ffffff;
-    color: #000000; }
+    background: #F7FFF7;
+    color: #262322; }
     .content.white p {
-      background: #000000;
-      color: #ffffff; }
+      background: #262322;
+      color: #F7FFF7; }
       .content.white p.date {
-        color: #000000; }
+        color: #262322; }
     .content.white h3 {
-      color: #000000; }
+      color: #262322; }
   .content p {
     width: 50%;
     margin: 2% 7.5% 1%;
@@ -372,7 +370,7 @@ h3 {
     .content p.date {
       background: none; }
   .content h3 {
-    color: #ffffff;
+    color: #F7FFF7;
     margin: 2% 7.5% 1%; }
     @media all and (max-width: 768px) {
       .content h3 {
